--- a/qodana.yaml
+++ b/qodana.yaml
@@ -10,7 +10,7 @@ profile:
 
 #Enable inspections
 #include:
-#  - name: <SomeEnabledInspectionId>
+#  - name: <SomeEnabledInspectio
 
 #Disable inspections
 #exclude:
